lanthipeptides: all naming now consistent

--- a/antismash/modules/lanthipeptides/templates/details.html
+++ b/antismash/modules/lanthipeptides/templates/details.html
@@ -5,7 +5,7 @@
       No core peptides found.
     </div>
   {% else %}
-  <h4>Lantipeptide(s)</h4>
+  <h4>Lanthipeptide(s)</h4>
   <hr>
   <dl class="details-text">
     {% for motif in cluster.motifs %}
