hmm_detection: add support for pbde clusters

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -183,15 +183,8 @@ a {
 }
 
 .structure img {
-    display: inline-block;
-    width:80%;
+    width: 90%;
     height: auto;
-}
-
-.structure-link {
-    display: inline-block;
-    text-align: center;
-    width:100%;
 }
 
 .as-structure-warning {
@@ -443,6 +436,10 @@ a {
 
 .fused {
     .ripp;
+}
+
+.pbde {
+    .hydrocarbon;
 }
 
 .other {
