html: fix badly merged css

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -183,8 +183,15 @@ a {
 }
 
 .structure img {
-    width: 90%;
+    display: inline-block;
+    width:80%;
     height: auto;
+}
+
+.structure-link {
+    display: inline-block;
+    text-align: center;
+    width:100%;
 }
 
 .as-structure-warning {
@@ -322,7 +329,7 @@ a {
     .secmet(blue, #ffff77, blue);
 }
 
-.lantipeptide {
+.lanthipeptide {
     .lantibiotic
 }
 
