clusterblast: relabel 'Homologous gene clusters' to 'Similar gene clusters'

--- a/antismash/modules/clusterblast/templates/clusterblast.html
+++ b/antismash/modules/clusterblast/templates/clusterblast.html
@@ -1,5 +1,5 @@
 <div class = "clusterblast">
-  <h3>Homologous gene clusters</h3>
+  <h3>Similar gene clusters</h3>
     {%- if not cluster.cluster_blast %}
       <div>
         <p>No significant ClusterBlast hits found.</p>
