--- a/antismash/modules/clusterblast/templates/knownclusterblast.html
+++ b/antismash/modules/clusterblast/templates/knownclusterblast.html
@@ -1,5 +1,5 @@
 <div class = "knownclusterblast">
-  <h3>Homologous known gene clusters</h3>
+  <h3>Similar known gene clusters</h3>
   <div>
     <select id="knownclusterblast-{{cluster.idx}}-select" class="clusterblast-selector">
       <option value="svg/knownclusterblast{{cluster.idx}}_all.svg">
