--- a/antismash/modules/clusterblast/templates/subclusterblast.html
+++ b/antismash/modules/clusterblast/templates/subclusterblast.html
@@ -1,5 +1,5 @@
 <div class = "subclusterblast">
-  <h3>Homologous subclusters</h3>
+  <h3>Similar subclusters</h3>
   <div>
     {% if cluster.subcluster_blast %}
     <select id= "subclusterblast-{{cluster.idx}}-select" class= "clusterblast-selector">
