lanthipeptides: only process lanthipeptide motifs at the jinja template level

--- a/antismash/modules/lanthipeptides/templates/details.html
+++ b/antismash/modules/lanthipeptides/templates/details.html
@@ -8,7 +8,7 @@
   <h4>Lanthipeptide(s)</h4>
   <hr>
   <dl class="details-text">
-    {% for motif in cluster.motifs %}
+    {% for motif in cluster.motifs if motif.peptide_type == "lanthipeptide" %}
       <dt>
         {{motif.get_name()}} leader / core peptide, putative {{motif.peptide_class}}
       </dt>
