--- a/antismash/modules/lanthipeptides/templates/details.html
+++ b/antismash/modules/lanthipeptides/templates/details.html
@@ -8,14 +8,14 @@
   <h4>Lanthipeptide(s)</h4>
   <hr>
   <dl class="details-text">
-    {% for motif in cluster.motifs if motif.peptide_type == "lanthipeptide" %}
+    {% for motif in cluster.motifs if motif.peptide_class == "lanthipeptide" %}
       <dt>
-        {{motif.get_name()}} leader / core peptide, putative {{motif.peptide_class}}
+        {{motif.get_name()}} leader / core peptide, putative {{motif.peptide_subclass}}
       </dt>
       <dd>
-        {{ motif.leader_seq }}
+        {{ motif.leader }}
         -
-        {% for aa in motif.core_seq -%}
+        {% for aa in motif.core -%}
           {%- if aa == 'S' -%}
             <span class="dha">Dha</span>
           {%- elif aa == 'T' -%}
