--- a/antismash/modules/lanthipeptides/templates/sidepanel.html
+++ b/antismash/modules/lanthipeptides/templates/sidepanel.html
@@ -2,9 +2,9 @@
   <div class="more-details">
     <h3> Prediction details </h3>
     <dl class ="prediction-text">
-    {%- for motif in cluster.motifs if motif.peptide_type == "lanthipeptide" -%}
+    {%- for motif in cluster.motifs if motif.peptide_class == "lanthipeptide" -%}
       <dt>{{motif.get_name()}}</dt>
-        <dd>Putative {{motif.peptide_class}}</dd>
+        <dd>Putative {{motif.peptide_subclass}}</dd>
         <dd>Cleavage pHMM score: {{'%0.2f' | format(motif.score)}}</dd>
         <dd>RODEO score: {{motif.rodeo_score}}</dd>
         <dd>Monoisotopic mass: {{'%0.1f' | format(motif.monoisotopic_mass)}} Da</dd>
