--- a/antismash/modules/thiopeptides/templates/details.html
+++ b/antismash/modules/thiopeptides/templates/details.html
@@ -8,12 +8,12 @@
     <h4> Thiopeptide(s) </h4>
     <hr>
     <dl class="details-text">
-      {% for motif in cluster.motifs if motif.peptide_type == "thiopeptide" %}
-        <dt> {{motif.locus_tag}} leader / core peptide, putative {{motif.peptide_class}} </dt>
+      {% for motif in cluster.motifs if motif.peptide_class == "thiopeptide" %}
+        <dt> {{motif.locus_tag}} leader / core peptide, putative {{motif.peptide_subclass}} </dt>
         <dd>
-          {{ motif.leader_seq }}
+          {{ motif.leader }}
           -
-          {% for aa in motif.core_seq -%}
+          {% for aa in motif.core -%}
             {%- if aa == 'S' -%}
               <span class="dha">Dha</span>
             {%- elif aa == 'T' -%}
