--- a/antismash/modules/thiopeptides/templates/sidepanel.html
+++ b/antismash/modules/thiopeptides/templates/sidepanel.html
@@ -1,9 +1,9 @@
 <div class="more-details">
   <h3> Prediction details </h3>
   <dl class ="prediction-text">
-  {% for motif in cluster.motifs if motif.peptide_type == "thiopeptide" %}
+  {% for motif in cluster.motifs if motif.peptide_class == "thiopeptide" %}
      <dt>{{motif.locus_tag}}</dt>
-      <dd>Putative {{motif.peptide_class}}</dd>
+      <dd>Putative {{motif.peptide_subclass}}</dd>
         <dd>Cleavage pHMM score: {{'%0.2f' | format(motif.score)}}</dd>
         <dd>RODEO score: {{motif.rodeo_score}}</dd>
         <dd>Monoisotopic mass: {{ '%0.1f' % motif.monoisotopic_mass}} Da</dd>
@@ -20,7 +20,7 @@
 
       <br>
 
-      {% if motif.peptide_class != "Type III" -%}
+      {% if motif.peptide_subclass != "Type III" -%}
         <dt>Considering maturation reactions</dt>
           <dd>Monoisotopic mass: {{ '%0.1f' % motif.mature_weights[1]}} Da</dd>
           <dd>Molecular weight: {{ '%0.1f' % motif.mature_weights[0]}} Da</dd>
