thiopeptides: properly store cleaved residues as tail

--- a/antismash/modules/thiopeptides/templates/details.html
+++ b/antismash/modules/thiopeptides/templates/details.html
@@ -24,7 +24,7 @@
               {{ aa }}
             {%- endif -%}
           {% endfor -%}
-          <span class="cut">{{motif.cleaved_residues}}</span>
+          <span class="cut">{{motif.tail}}</span>
         </dd>
       {% endfor %}
     </dl>
