--- a/antismash/modules/nrps_pks/templates/details.html
+++ b/antismash/modules/nrps_pks/templates/details.html
@@ -2,7 +2,7 @@
   <h3>Detailed annotation</h3>
     {% for js in cluster.get_domain_details() %}
       {% if js['orfs'] | length > 0 %}
-        <div class="details-svg" id="cluster-{{cluster.get_cluster_number()}}-details-svg">
+        <div class="details-svg" id="cluster-{{cluster.get_cluster_number()}}-details-svg"></div>
       {% endif %}
     {% endfor %}
 </div>
