--- a/antismash/modules/lanthipeptides/templates/sidepanel.html
+++ b/antismash/modules/lanthipeptides/templates/sidepanel.html
@@ -1,10 +1,10 @@
-{% if cluster.motifs | length != 0 %}
+{% if results | length != 0 %}
   <div class="more-details">
     <h3> Prediction details </h3>
     <dl class ="prediction-text">
-    {%- for motif in cluster.motifs if motif.peptide_class == "lanthipeptide" -%}
-      <dt>{{motif.get_name()}}</dt>
-        <dd>Putative {{motif.peptide_subclass}}</dd>
+    {% for motifs in results.values() %}
+    {%- for motif in motifs -%}
+      <dt>{{motif.get_name()}} - {{motif.peptide_subclass}}</dt>
         <dd>Cleavage pHMM score: {{'%0.2f' | format(motif.score)}}</dd>
         <dd>RODEO score: {{motif.rodeo_score}}</dd>
         <dd>Monoisotopic mass: {{'%0.1f' | format(motif.monoisotopic_mass)}} Da</dd>
@@ -12,8 +12,7 @@
         <dd>Number of bridges: {{motif.lan_bridges}}</dd>
         {% if motif.get_modifications() | length != 0 %}
           {%- for mod in motif.get_modifications() %}
-            <br>Additional modifications:
-              {{mod}}
+            <dd>Additional modifications: {{mod}}</dd>
           {% endfor -%}
         {% endif %}
         {% if motif.alternative_weights %}
@@ -30,8 +29,8 @@
             </dl>
           </dd>
         {% endif %}
-
     {%- endfor -%}
+    {% endfor %}
   </dl>
 </div>
 <div>
