--- a/antismash/modules/nrps_pks/templates/sidepanel.html
+++ b/antismash/modules/nrps_pks/templates/sidepanel.html
@@ -1,43 +1,40 @@
 <div class="structure">
-  <h3>Predicted core structure</h3>
-    {% if cluster.smiles_structure %}
-    <canvas id="smiles-canvas-{{cluster.get_cluster_number()}}" class="smiles-canvas" data-smiles="{{cluster.smiles_structure}}" width="250" height="250"></canvas>
-    {% else %}
-    <a class = "structure-link" href="{{cluster.get_structure_image_url()}}" target="_new">
-      <img src="{{cluster.get_structure_image_url()}}">
-    </a>
-    {% endif %}
-    <div class="as-structure-warning">
-      {{cluster.warning}}
+  {% if cluster.monomer %}
+    <h3>Predicted core structure</h3>
+      {% if cluster.smiles_structure %}
+      <canvas id="smiles-canvas-{{cluster.get_cluster_number()}}" class="smiles-canvas" data-smiles="{{cluster.smiles_structure}}" width="250" height="250"></canvas>
+      {% endif %}
+      <div class="as-structure-warning">
+        {{cluster.warning}}
+      </div>
     </div>
-  </div>
-  <div class="more-details">
-    <h3>Prediction details</h3>
+    <div class="more-details">
+      <h3>Prediction details</h3>
       <dl class="prediction-text">
-        <dt>Monomers prediction:</dt>
-          <dd>{{cluster.get_monomer_prediction()}}</dd>
-          {% for gene_id, predictions in cluster.sidepanel_predictions.items() | sort %}
-            <dt><strong>{{gene_id}}</strong></dt>
-            {% if gene_id in cluster.url_strict %}
-              <dd> Search NORINE for peptide:
-                <a href="{{cluster.url_strict[gene_id]}}" target="_new">strict</a>
-                  or
-                <a href="{{cluster.url_relaxed[gene_id]}}" target="_new">relaxed</a>
-              </dd>
-              <br>
-            {% endif %}
-            {% for domain in record.get_cds_by_name(gene_id).nrps_pks.domains %}
-              {% if domain.feature_name in results.consensus %}
-                <dd><strong>{{domain.name}} ({{domain.start}}..{{domain.end}})</strong>: {{results.consensus[domain.feature_name]}}<br>
-                {% for prediction in results.nrps.get(domain.feature_name, {}).values() %}
-                    {{prediction.as_html()}}
-                {% endfor %}
-                </dd>
-              {% endif %}
-            {% endfor %}
+        <dt>Monomers prediction:</dt> <dd>{{cluster.get_monomer_prediction()}}</dd>
+        {% for gene_id in cluster.sidepanel_features %}
+          <dt><strong>{{gene_id}}</strong></dt>
+          {% if gene_id in cluster.url_strict %}
+            <dd> Search NORINE for peptide:
+              <a href="{{cluster.url_strict[gene_id]}}" target="_new">strict</a>
+                or
+              <a href="{{cluster.url_relaxed[gene_id]}}" target="_new">relaxed</a>
+            </dd>
             <br>
+          {% endif %}
+          {% for domain in record.get_cds_by_name(gene_id).nrps_pks.domains %}
+            {% if domain.feature_name in results.consensus %}
+              <dd><strong>{{domain.name}} ({{domain.start}}..{{domain.end}})</strong>: {{results.consensus[domain.feature_name]}}<br>
+              {% for prediction in results.domain_predictions.get(domain.feature_name, {}).values() %}
+                  {{prediction.as_html()}}<br>
+              {% endfor %}
+              </dd>
+            {% endif %}
           {% endfor %}
-      </dl>
+          <br>
+        {% endfor %}
+      {% endif %}
+    </dl>
   </div>
 
 
