html: add missing KCB to CB results styling, add padding to details blocks

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -458,8 +458,12 @@ table {
     float: left;
 }
 
-.details, .clusterblast, .subclusterblast {
+.details, .clusterblast, .subclusterblast, .knownclusterblast {
     .left-padding;
+}
+
+.details-text {
+    padding-bottom: 0.5em;
 }
 
 .jsdomain-line {
