html: add a visual warning that a cluster is on a contig edge

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -307,6 +307,16 @@ dd {
     .left-padding;
 }
 
+.contig-edge-warning {
+    font-size: 70%;
+    font-weight: bold;
+    float: right;
+    color: black;
+    background-color: orange;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 table {
     border-collapse: collapse;
 }
