html, clusterblast: change display of MiBIG similarity and supporting data structures

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -359,6 +359,10 @@ table {
     color: @antismash-main;
 }
 
+.similarity-text {
+    color: @antismash-gray;
+}
+
 .svgene-type-other {
     fill: @gene-type-other;
     stroke: black;
