--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -218,3 +218,15 @@
 .other {
     .secmet(lightsteelblue, midnightblue);
 }
+
+.cf_putative {
+    .secmet(black, #f2f2f2, black);;
+}
+
+.cf_saccharide {
+    .cf_putative;
+}
+
+.cf_fatty_acid {
+    .cf_putative;
+}
