--- a/antismash/modules/thiopeptides/templates/sidepanel.html
+++ b/antismash/modules/thiopeptides/templates/sidepanel.html
@@ -5,25 +5,25 @@
      <dt>{{motif.locus_tag}}</dt>
       <dd>Putative {{motif.peptide_subclass}}</dd>
         <dd>Cleavage pHMM score: {{'%0.2f' | format(motif.score)}}</dd>
-        <dd>RODEO score: {{motif.rodeo_score}}</dd>
+        <dd>RODEO score: {{motif.detailed_information.rodeo_score}}</dd>
         <dd>Monoisotopic mass: {{ '%0.1f' % motif.monoisotopic_mass}} Da</dd>
         <dd>Molecular weight: {{ '%0.1f' % motif.molecular_weight}} Da</dd>
-        <dd><u> Predicted peptide features:</u><br>{{motif.core_features}}</dd>
+        <dd><u> Predicted peptide features:</u><br>{{motif.detailed_information.core_features}}</dd>
 
-        {% if motif.macrocycle -%}
-          <dd>Macrocycle: {{motif.macrocycle}}</dd>
+        {% if motif.detailed_information.macrocycle -%}
+          <dd>Macrocycle: {{motif.detailed_information.macrocycle}}</dd>
         {%- endif %}
 
-        {% if motif.amidation -%}
-          <dd>Tail reaction: {{motif.tail_reaction}}</dd>
+        {% if motif.detailed_information.amidation -%}
+          <dd>Tail reaction: {{motif.detailed_information.tail_reaction}}</dd>
         {%- endif %}
 
       <br>
 
       {% if motif.peptide_subclass != "Type III" -%}
         <dt>Considering maturation reactions</dt>
-          <dd>Monoisotopic mass: {{ '%0.1f' % motif.mature_weights[1]}} Da</dd>
-          <dd>Molecular weight: {{ '%0.1f' % motif.mature_weights[0]}} Da</dd>
+          <dd>Monoisotopic mass: {{ '%0.1f' % motif.detailed_information.mature_weights[1]}} Da</dd>
+          <dd>Molecular weight: {{ '%0.1f' % motif.detailed_information.mature_weights[0]}} Da</dd>
       {%- endif %}
 
       {% if motif.alternative_weights -%}
