hmm_detection: Add betalactone cluster
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -219,6 +219,10 @@
     .secmet(lightsteelblue, midnightblue);
 }
 
+.betalactone {
+    .hydrocarbon
+}
+
 .unknown {
     .secmet(black, #f2f2f2, black);
 }
